Updating the Alpine Openjdk branch for 6.12.0
- Updated Dockerfile
- Updated the scripts
- Added custom Jre Jlink command